k8s/moshi/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moshi
  labels:
    app.kubernetes.io/part-of: beagle
