k8s/moshi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moshi
  namespace: moshi
  labels:
    app.kubernetes.io/name: moshi-server
    app.kubernetes.io/part-of: beagle
spec:
  selector:
    app.kubernetes.io/name: moshi-server
  type: ClusterIP
  ports:
    - name: ws
      port: 8998
      targetPort: ws
      protocol: TCP
